k8s/ingress.yaml
# k8s/ingress.yaml
# GCP Global HTTP(S) Load Balancer Ingress protected by Google Cloud Armor WAF
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneshield-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: oneshield-api-service
            port:
              number: 8000
