k8s/kyverno-policy.yaml
# k8s/kyverno-policy.yaml
# Kyverno ClusterPolicy enforcing Keyless Sigstore Cosign OIDC Signature Verification in GKE
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signature
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: verify-signature
    match:
      any:
      - resources:
          kinds:
          - Pod
    verifyImages:
    - imageReferences:
      - "us-central1-docker.pkg.dev/project-644b97eb-9375-4ec7-82e/*"
      mutateDigest: false
      attestors:
      - count: 1
        entries:
        - keyless:
            rekor:
              url: "https://rekor.sigstore.dev"
            issuer: "https://token.actions.githubusercontent.com"
            subjectRegExp: "https://github.com/jagat1980/gcpops-terraform-iac/.*"
